# .template-cpp-meson-app

./: README.md  meson.build  meson_options.txt
src/: config.h.in  main.cpp  meson.build  version.c.in  version.c.in.pre  version.h
